# artifacts/api-server/src/routes/index.ts
@@ -1,12 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import paydRouter from "./payd";
-import payheroRouter from "./payhero";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(paydRouter);
-router.use(payheroRouter);
+router.use(settingsRouter);
 
 export default router;
